# airflow-llm-orchestrator

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  LAUNCH.md  LICENSE  Makefile  QUICKSTART.md  QUICKSTART_PRODUCTION.md  README.md  demo.py  demo_basic.py  docker-compose.yml  enterprise_test.py  generate_dag.py  generate_dag_simple.py  pyproject.toml  requirements-dev.txt  requirements-models.txt  requirements.txt  setup.py  simple_test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  production-ci.yml
airflow_llm/: __init__.py  cli.py  config_parser.py  core_engine.py  cost_optimizer.py  dag_factory.py  decorators.py  enterprise_features.py  model_server.py  natural_language_processor.py  ollama_backend.py  orchestrator.py  production_dag_generator.py  self_healer.py  utils.py
airflow_llm/templates/: __init__.py  dag_template.py.j2
examples/: autonomous_recovery.py  complete_ml_pipeline.py  cost_optimization_examples.py  nlp_dag_generation.py  production_example.py
infra/helm/: values.yaml
infra/kubernetes/: airflow-llm-deployment.yaml
infra/terraform/: main.tf  variables.tf
tests/: test_cli.py  test_complete.py  test_cost_optimizer.py  test_dag_factory.py  test_decorators.py  test_load.py  test_model_ensemble.py  test_orchestrator.py  test_production_readiness_check.py  test_quick_production.py  test_self_healer.py  test_simple.py  test_stress.py
